Bug 132105, XLinks must pay attention to the popup prefs. r=harishd, sr=jst.